--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "bootupportfolio",
   "version": "0.1.0",
+  "engines": {
+    "yarn": "1.x"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
